# recursowiki-gororoba

./: .mcp.json  Dockerfile  next.config.ts  package-lock.json  package.json  pyproject.toml  tools.toml
api/: api.py  data_pipeline.py  genai_client.py  google_embedder_client.py  main.py  pyproject.toml  simple_chat.py  websocket_wiki.py
src/app/: globals.css
src/app/[owner]/[repo]/: page.tsx
src/app/[owner]/[repo]/analysis/: page.tsx
src/app/analysis/[runId]/: page.tsx
src/components/analysis/: AnalysisProgress.tsx  AnalysisReport.tsx  DependencyGraph.tsx  FilterBar.tsx  FindingDetail.tsx  FindingsTable.tsx  MetricsPanel.tsx  SeverityOverview.tsx  ToolBreakdown.tsx
src/hooks/: useAnalysis.ts
src/types/: analysis.ts
tests/: README.md  run_tests.py
