[project]
name = "recursowiki-gororoba"
version = "0.1.0"
description = "Code intelligence platform with 23-tool analysis pipeline, SARIF normalization, and MCP server"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "api",
    "packages/tool-runner",
    "packages/sarif-normalizer",
    "packages/mcp-server",
    "packages/langgraph-orchestrator",
]

[tool.uv.sources]
tool-runner = { workspace = true }
sarif-normalizer = { workspace = true }
gororoba-mcp = { workspace = true }
langgraph-orchestrator = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --disable-warnings --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests that take more than a few seconds",
    "network: Tests that require network access",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
